@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.32 2008/04/30 16:12:54 tat Exp $
+$Id: ChangeLog,v 1.33 2008/05/05 14:38:08 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
+    - [config] load from opaque data sources (u_config_load_from_drv)
     - [config] include directive support
     - [config] example/config/uconfig program added
 
